added header, removed comment

--- a/index.html
+++ b/index.html
@@ -12,16 +12,11 @@
   </head>
   <body>
       <div class="container-fluid text-center bg-light px-5 py-5">
+          <h1 class="py-3 text-secondary">Dane metorologiczne IMGW</h1>
           <div class="row">
-              
           </div>
       </div>
-      <!-- <div class="col-2 py-3 border border-secondary">
-        <h1>Miasto</h1>
-        <p class="lead">Temperatura:</p>
-        <p class="lead">Wilgotność względna: </p>
-        <p class="lead">Ciśnienie: </p>
-    </div> -->
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
